# stranger_parties

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_dev  README.md  docker-compose-dev.yml  docker-compose.yml  docker-composex.yml  manage.py  pyproject.toml  schema.yaml
binary/: generate_schema.sh  run_debug.sh  start_server.sh  start_server_dev.sh
stranger_parties/: asgi.py  router.py  settings.py  urls.py  wsgi.py
stranger_parties/core/: apps.py  managers.py  mixins.py  models.py
stranger_parties/core/fixtures/: super-user.yaml
stranger_parties/core/migrations/: 0001_initial.py
stranger_parties/invite/: apps.py  models.py  signals.py  urls.py  util.py
stranger_parties/invite/api/: router.py  serializers.py  views.py
stranger_parties/invite/fixtures/: event.yaml  guest.yaml
stranger_parties/invite/migrations/: 0001_initial.py  0002_auto_20210730_0110.py  0003_auto_20210730_0118.py  0004_alter_invite_guest.py
stranger_parties/invite/templates/: base.html  invite.html  new_guest.html
stranger_parties/invite/tests/: test_event.py  test_guest.py
